src/test/ui/issues/issue-22384.stderr
error[E0576]: cannot find associated type `foobar` in trait `Copy`
  --> $DIR/issue-22384.rs:6:21
   |
LL |     <<i32 as Copy>::foobar as Trait>::foo();
   |                     ^^^^^^ not found in `Copy`

error: aborting due to previous error

